--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -69,7 +69,7 @@ section.container {
   position: relative;
   width: 600px;
   height: 300px;
-  margin: 280px auto 0;
+  margin: 280px 30px 0;
   perspective: 1000px;
   -webkit-perspective: 1000px;
   -moz-perspective: 1000px; }
